--- a/package.json
+++ b/package.json
@@ -4,13 +4,19 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha './*.test.js'",
+    "start": "node src/index.js",
+    "test:coverage": "nyc --reporter=lcov --reporter=text --reporter=json-summary -- npm test"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "chai": "^4.3.7",
     "express": "^4.18.2",
-    "pg": "^8.11.1"
+    "nyc": "^15.1.0",
+    "pg": "^8.11.1",
+    "save-dev": "0.0.1-security",
+    "sinon": "^15.2.0"
   }
 }
