--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha './*.test.js'",
-    "start": "node src/index.js",
+    "start": "node index.js",
     "test:coverage": "nyc --reporter=lcov --reporter=text --reporter=json-summary -- npm test"
   },
   "keywords": [],
@@ -16,6 +16,7 @@
     "express": "^4.18.2",
     "nyc": "^15.1.0",
     "pg": "^8.11.1",
+    "redis": "^4.6.7",
     "save-dev": "0.0.1-security",
     "sinon": "^15.2.0"
   }
